--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,19 @@
 			<groupId>org.hibernate.orm</groupId>
 			<artifactId>hibernate-community-dialects</artifactId>
 		</dependency>
+
+		<!-- Adicionando Log4j vulnerável -->
+		<dependency>
+		  <groupId>org.apache.logging.log4j</groupId>
+		  <artifactId>log4j-core</artifactId>
+		  <version>2.15.0</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.apache.logging.log4j</groupId>
+		  <artifactId>log4j-api</artifactId>
+		  <version>2.15.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
